learning how to make it prettier

--- a/style.css
+++ b/style.css
@@ -2,22 +2,55 @@
     font-family: 'Nerd';
     src: url(Fonts/mononoki-Regular\ Nerd\ Font\ Complete\ Mono.ttf);
 }
-/*Background*/
-.bg-gradient {
-    height: 100vh;
+
+* { 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-family: 'Nerd';
+    color: #FFFADE;
+}
+
+section {
     width: 100%;
-    background-image: linear-gradient(45deg,#33224D, #4B4453, #B0A8B9)
+    height: 100vh;
+    color:#FFFADE;
+    background-image: linear-gradient(0deg, hsla(287, 68%, 32%, 1) 0%, hsla(23, 64%, 75%, 1) 100%);
+    background-size: 400% 400%;
+    position: relative;
+    animation: animatebg 10s ease-in-out infinite;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.container {
+    border: 5px solid #FFFADE;
+    max-width: 500px;
+    max-height: 300px;
+    margin: auto;
+    height: 50vh;
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+body {
+   
 }
 
-h1 {
-    text-align: center;
-    font-size: large;
-    font-family: 'Nerd';
-    color: #FFFADE;
-}
-
-p {
-    text-align: center;
-    font-family: 'Nerd';
-    color: #FFFADE;
+@keyframes animatebg {
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0 50%;
+    }
 }
